--- a/index.html
+++ b/index.html
@@ -2,63 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Tools Dashboard</title>
-  <link rel="stylesheet" href="css/styles.css" />
+  <title>Golden Royals Studios</title>
+  <style>
+    /* quick inline styles for demo */
+    #reply, #image-result, #model-result { margin-top: 1rem; }
+    img { max-width: 100%; }
+  </style>
 </head>
 <body>
-  <aside class="sidebar">
-    <h2 class="logo">My AI Suite</h2>
-    <nav>
-      <ul>
-        <li data-panel="chat">AI Chatbox</li>
-        <li data-panel="artlab">Image & Art Lab</li>
-        <li data-panel="blender">Blender Helper</li>
-        <li data-panel="settings">Settings</li>
-      </ul>
-    </nav>
-  </aside>
+  <h1>AI Playground</h1>
 
-  <main class="content">
-    <!-- Chatbox Panel -->
-    <section id="panel-chat" class="panel active">
-      <h3>AI Chatbox</h3>
-      <div class="chat-window"></div>
-      <textarea id="chat-input" placeholder="Ask me anything..."></textarea>
-      <button id="chat-send">Send</button>
-    </section>
+  <!-- Chat UI -->
+  <section id="chat">
+    <textarea id="chat-input" placeholder="Say something…"></textarea>
+    <button id="chat-send">Send</button>
+    <div id="reply"></div>
+  </section>
 
-    <!-- Image & Art Lab Panel -->
-    <section id="panel-artlab" class="panel">
-      <h3>Image & Art Lab</h3>
-      <input id="art-prompt" type="text" placeholder="Describe your image" />
-      <button id="art-generate">Generate</button>
-      <div class="art-output"></div>
-    </section>
+  <!-- Image UI -->
+  <section id="image-gen">
+    <input id="image-prompt" placeholder="Enter a prompt…" />
+    <button id="image-send">Generate Image</button>
+    <div id="image-result"></div>
+  </section>
 
-    <!-- Blender Helper Panel -->
-    <section id="panel-blender" class="panel">
-      <h3>Blender Helper</h3>
-      <input id="blender-image-url" type="text" placeholder="Image URL for 3D model" />
-      <button id="blender-generate">Generate 3D Model</button>
-      <div id="model-canvas">3D canvas placeholder</div>
-    </section>
+  <!-- Model UI -->
+  <section id="model-gen">
+    <input id="model-url" placeholder="Image URL for 3D model" />
+    <button id="model-send">Generate 3D Model</button>
+    <div id="model-result"></div>
+  </section>
 
-    <!-- Settings Panel -->
-    <section id="panel-settings" class="panel">
-      <h3>Settings</h3>
-      <label>API Key: <input id="api-key" type="password" /></label>
-      <label>
-        Theme:
-        <select id="theme-select">
-          <option value="light">Light</option>
-          <option value="dark">Dark</option>
-        </select>
-      </label>
-      <button id="save-settings">Save</button>
-    </section>
-  </main>
-
-  <script type="module" src="js/app.js"></script>
+  <!-- Load your front-end logic as an ES module -->
+  <script type="module" src="/js/main.js"></script>
 </body>
 </html>
